frontend/tests/cases/positive/existentials/simple-existential.gr
foo : exists {a : Type} . a
foo = pack < Int , 42 > as exists {a : Type} . a