frontend/tests/cases/negative/graded/impossibilityCheck.gr
bad2 : forall {n : Nat, a : Type} . a [n] -> Int
bad2 [_] = 42